third_party/blink/renderer/core/inspector/dev_tools_host.cc
@@ -45,7 +45,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/html/parser/text_resource_decoder.h"
 #include "third_party/blink/renderer/core/input/context_menu_allowed_scope.h"
 #include "third_party/blink/renderer/core/inspector/inspector_frontend_client.h"
-#include "third_party/blink/renderer/core/layout/layout_theme.h"
 #include "third_party/blink/renderer/core/loader/frame_loader.h"
 #include "third_party/blink/renderer/core/page/chrome_client.h"
 #include "third_party/blink/renderer/core/page/context_menu_controller.h"
@@ -214,27 +213,6 @@ void DevToolsHost::ShowContextMenu(LocalFrame* target_frame,
         target_frame, x * zoom, y * zoom, menu_provider);
   }
 }
-
-String DevToolsHost::getSelectionBackgroundColor() {
-  return LayoutTheme::GetTheme().ActiveSelectionBackgroundColor().Serialized();
-}
-
-String DevToolsHost::getSelectionForegroundColor() {
-  return LayoutTheme::GetTheme().ActiveSelectionForegroundColor().Serialized();
-}
-
-String DevToolsHost::getInactiveSelectionBackgroundColor() {
-  return LayoutTheme::GetTheme()
-      .InactiveSelectionBackgroundColor()
-      .Serialized();
-}
-
-String DevToolsHost::getInactiveSelectionForegroundColor() {
-  return LayoutTheme::GetTheme()
-      .InactiveSelectionForegroundColor()
-      .Serialized();
-}
-
 
 bool DevToolsHost::isHostedMode() {
   return false;
